[package]
name = "core-p2p"
version = "0.1.0"
authors = ["piaoliu <441594700@qq.com>"]

[dependencies]
libp2p = { git = "https://github.com/libp2p/rust-libp2p", rev = "d961e656a74d1bab5366d371a06f9e10d5f4a6c5", default-features = false, features = ["secio-rsa", "secio-secp256k1"] }
futures = "0.1"
tokio = "0.1"
bytes = "0.4.10"
byteorder = "1.0.0"
